--- a/package.xml
+++ b/package.xml
@@ -39,7 +39,7 @@
   <run_depend>pr2_controller_manager</run_depend>
   <run_depend>robot_mechanism_controllers</run_depend>
   <run_depend>openni_camera</run_depend>
-  <run_depend>rviz_oculus</run_depend>
+  <run_depend>oculus_rviz_plugins</run_depend>
   <run_depend>rviz</run_depend>
   <run_depend>tf</run_depend>
 
